--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
         };
     </script>
 
-    <!-- QR Code Styling Library (kembali ke versi asli untuk stabilitas) -->
+    <!-- QR Code Styling Library -->
     <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
+
+    <!-- GSAP for advanced animations -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 
     <style>
         /* Custom animations and overrides */
@@ -95,7 +98,34 @@
         .btn:hover {
             transform: scale(1.05);
         }
-        /* Ensure QR code container is visible and sized properly */
+        /* Modern QR animation: scale-up and fade-in */
+        .qr-animate {
+            animation: scaleUpFadeIn 1s ease-out forwards;
+        }
+        @keyframes scaleUpFadeIn {
+            0% {
+                transform: scale(0.5);
+                opacity: 0;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+        /* Loading spinner */
+        .loading-spinner {
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-top: 4px solid var(--color-secondary);
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        /* Ensure QR code container is visible */
         #qr-code-container {
             width: 100%;
             max-width: 300px;
@@ -107,14 +137,16 @@
             padding: 1rem;
             border-radius: 8px;
             box-shadow: 0 0 20px rgba(0,0,0,0.5);
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        #qr-code-container:hover {
+            transform: scale(1.05);
         }
         #qr-code canvas, #qr-code svg {
             width: 100% !important;
             height: auto !important;
             border-radius: 4px;
         }
-        /* Smooth scrolling for anchor links */
         html {
             scroll-behavior: smooth;
         }
@@ -373,7 +405,8 @@
         </section>
 
         <section class="output flex flex-col items-center justify-center bg-surface p-6 rounded-xl border border-border lg:flex-1 lg:sticky lg:top-8">
-            <div id="qr-code-container" class="bg-white">
+            <div id="qr-code-container" class="bg-white relative">
+                <div id="qr-loading" class="absolute inset-0 flex items-center justify-center loading-spinner hidden"></div>
                 <div id="qr-code"></div>
             </div>
             <div class="download-buttons flex flex-col sm:flex-row gap-4 w-full">
@@ -416,7 +449,7 @@
             });
 
             qrCode.append(document.getElementById("qr-code"));
-            console.log('QR Code initialized'); // Debugging: Cek apakah library dimuat
+            console.log('QR Code initialized');
 
             window.openTab = function(evt, tabName) {
                 currentTab = tabName;
@@ -432,6 +465,9 @@
             };
 
             function generateQrCode() {
+                const loading = document.getElementById('qr-loading');
+                loading.classList.remove('hidden');
+
                 let data = "";
                 switch (currentTab) {
                     case 'text':
@@ -524,12 +560,11 @@
                         break;
                 }
 
-                // Validasi data agar tidak kosong
                 if (!data) {
-                    data = "Welcome to VIN NESIA QR Generator!"; // Default jika kosong
+                    data = "Welcome to VIN NESIA QR Generator!";
                     console.log('Data kosong, menggunakan default');
                 } else {
-                    console.log('Data QR: ', data); // Debugging
+                    console.log('Data QR: ', data);
                 }
 
                 const dotColor = document.getElementById('dot-color').value;
@@ -538,13 +573,19 @@
                 const qrContainer = document.getElementById('qr-code-container');
                 qrContainer.style.backgroundColor = bgColor;
 
-                qrCode.update({
-                    data: data,
-                    image: logoImage,
-                    dotsOptions: { color: dotColor, type: dotStyle },
-                    backgroundOptions: { color: "transparent" }
-                });
-                console.log('QR Code updated'); // Debugging
+                // Tambahkan animasi GSAP untuk efek canggih
+                gsap.to(qrContainer, { opacity: 0, scale: 0.5, duration: 0.5, onComplete: () => {
+                    qrCode.update({
+                        data: data,
+                        image: logoImage,
+                        dotsOptions: { color: dotColor, type: dotStyle },
+                        backgroundOptions: { color: "transparent" }
+                    });
+                    gsap.to(qrContainer, { opacity: 1, scale: 1, duration: 1, ease: "power3.out" });
+                    loading.classList.add('hidden');
+                }});
+
+                console.log('QR Code updated');
             }
 
             document.getElementById('generate-btn').addEventListener('click', generateQrCode);
@@ -555,7 +596,7 @@
                     const reader = new FileReader();
                     reader.onload = (event) => { 
                         logoImage = event.target.result; 
-                        console.log('Logo uploaded'); // Debugging
+                        console.log('Logo uploaded');
                     };
                     reader.readAsDataURL(file);
                 }
@@ -567,7 +608,7 @@
                     const reader = new FileReader();
                     reader.onload = (event) => { 
                         fileDataUrl = event.target.result; 
-                        console.log('File uploaded for QR'); // Debugging
+                        console.log('File uploaded for QR');
                     };
                     reader.readAsDataURL(file);
                 }
